# jinny

./: .drone.yml  .gitignore  Dockerfile  README.md  README.md.bak  docker-compose.yml  pyproject.toml  setup.py
dev/: devJinny.sh  quickInteractiveTest.sh  quickTest.sh  tag.sh  updateLocalJinny.sh
dev/githooks/: pre-commit
docs/: docker-compose.yml  index.html  inputs.yml  package-lock.json  package.json  tailwind.config.js
docs/css/: custom.css
docs/inputs/: base.yml  errata.yml  filters.yml  frontend.yml  globals.yml  unsafe.yml  usage.yml  usecases.yml
docs/js/: mobile-menu.js
docs/partials/: errata.html  filters.html  frontend.html  ga.html  globals.html  nav.html  opengraph.html  schema.json  title.html  unsafe.html  usage.html  usecases.html
src/jinny/: error.html  jinny.py  jinny_flask_extensions.py  jinny_logging.py  jinny_merging.py  requirements.txt
src/jinny/imports/: filter_extensions.py  global_extensions.py  jinny_unsafe.py
tests/: tests.py
tests/interactive_tests/: bad_censor.sh  bad_censor_1.txt  bad_censor_2.txt  bad_censor_3.txt  colours.sh  colours.txt  prompt_envvar.sh  prompt_envvar.txt
tests/test_assets/: bad_sample_values.json  bad_sample_values.yml  css.css  file_content.txt  filters_template.yml  nested_template.yml  print_template.txt  raw_template.yml  sample_env_values.env  sample_env_values.yml  sample_template.yml  sample_values.yml  sample_values_override.yml  template.html
